--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "python.analysis.extraPaths": ["./pages", "./config", "./views"]
+  "python.analysis.extraPaths": ["./pages", "./config", "./views"],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+  "python.formatting.provider": "none"
 }
